# vertex-wing-a1db

./: README.md  agent.py  config.py  device_info.py  free_chat.py  install.sh  main.py  mcp_client.py  pyproject.toml  requirements.txt  run.sh  start.sh  start_free.sh  test_all.py  tools.py  tui.py  web_server.py
plugins/: example.py
termux_mcp/: __init__.py  __main__.py  config.py  handler.py  network.py  security.py  server.py  shell.py  tools_schema.py  utils.py  websocket.py
termux_mcp/handlers/: ai_power.py  features.py  history.py  terminal.py
